--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>QVWI Pitch Competition | Cyber-Neumorphic Interface</title>
+  <title>Quantitative Ventures World Innovators Startup Pitch Competition | Future Tech Stage</title>
   
-  <meta name="description" content="Official home of the Quantitative Ventures World Innovators (QVWI) Startup Pitch Competition. A futuristic platform for space and business tech founders.">
-  <meta name="keywords" content="startup pitch, cyber tech, space ventures, neumorphism, quantitative ventures, seed funding">
-  
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Quantitative Ventures World Innovators Startup Pitch Competition">
+  <meta name="description" content="Official home of the Quantitative Ventures World Innovators (QVWI) Startup Pitch Competition. A global launchpad for space, AI, and business tech innovators offering seed funding and mentorship.">
+  <meta name="keywords" content="Quantitative Ventures World Innovators, Startup Pitch Competition, QVWI, Aryav Agrawal, Orbitonimics, space tech startup, business logistics competition, seed funding 2026, global startup stage">
+  <meta name="author" content="Quantitative Ventures World Innovators">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://qvwi-pitch.com/">
+  <meta property="og:title" content="Quantitative Ventures World Innovators Startup Pitch Competition">
+  <meta property="og:description" content="Empowering the next generation of global founders through high-stakes competition and technical mentorship. Join the 2026 cohort.">
+  <meta property="og:image" content="https://images.unsplash.com/photo-1451187580459-43490279c0fa?auto=format&fit=crop&q=80&w=1200">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://qvwi-pitch.com/">
+  <meta property="twitter:title" content="Quantitative Ventures World Innovators Startup Pitch Competition">
+  <meta property="twitter:description" content="Empowering global founders with seed capital and technical mentorship in Space and Business Tech.">
+  <meta property="twitter:image" content="https://images.unsplash.com/photo-1451187580459-43490279c0fa?auto=format&fit=crop&q=80&w=1200">
+
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
