--- a/index.html
+++ b/index.html
@@ -136,5 +136,6 @@
 <body class="cyber-grid relative min-h-screen">
   <div class="scanline pointer-events-none"></div>
   <div id="root"></div>
+  <script type="module" src="index.js"></script>
 </body>
 </html>
