--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quantitative Ventures World Innovators Startup Pitch Competition | Future Tech Stage</title>
-  
+
   <!-- Primary Meta Tags -->
   <meta name="title" content="Quantitative Ventures World Innovators Startup Pitch Competition">
-  <meta name="description" content="Official home of the Quantitative Ventures World Innovators (QVWI) Startup Pitch Competition. A global launchpad for space, AI, and business tech innovators offering seed funding and mentorship.">
-  <meta name="keywords" content="Quantitative Ventures World Innovators, Startup Pitch Competition, QVWI, Orbitonimics, space tech startup, business logistics competition, seed funding 2026, global startup stage">
+  <meta name="description"
+    content="Official home of the Quantitative Ventures World Innovators (QVWI) Startup Pitch Competition. A global launchpad for space, AI, and business tech innovators offering seed funding and mentorship.">
+  <meta name="keywords"
+    content="Quantitative Ventures World Innovators, Startup Pitch Competition, QVWI, Orbitonimics, space tech startup, business logistics competition, seed funding 2026, global startup stage">
   <meta name="author" content="Quantitative Ventures World Innovators">
   <meta name="robots" content="index, follow">
 
@@ -17,21 +19,27 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://qvwi-pitch.com/">
   <meta property="og:title" content="Quantitative Ventures World Innovators Startup Pitch Competition">
-  <meta property="og:description" content="Empowering the next generation of global founders through high-stakes competition and technical mentorship. Join the 2026 cohort.">
-  <meta property="og:image" content="https://images.unsplash.com/photo-1451187580459-43490279c0fa?auto=format&fit=crop&q=80&w=1200">
+  <meta property="og:description"
+    content="Empowering the next generation of global founders through high-stakes competition and technical mentorship. Join the 2026 competition.">
+  <meta property="og:image"
+    content="https://images.unsplash.com/photo-1451187580459-43490279c0fa?auto=format&fit=crop&q=80&w=1200">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://qvwi-pitch.com/">
   <meta property="twitter:title" content="Quantitative Ventures World Innovators Startup Pitch Competition">
-  <meta property="twitter:description" content="Empowering global founders with seed capital and technical mentorship in Space and Business Tech.">
-  <meta property="twitter:image" content="https://images.unsplash.com/photo-1451187580459-43490279c0fa?auto=format&fit=crop&q=80&w=1200">
+  <meta property="twitter:description"
+    content="Empowering global founders with seed capital and technical mentorship in Space and Business Tech.">
+  <meta property="twitter:image"
+    content="https://images.unsplash.com/photo-1451187580459-43490279c0fa?auto=format&fit=crop&q=80&w=1200">
 
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-  
+  <link
+    href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&family=Public+Sans:wght@300;400;700&display=swap"
+    rel="stylesheet">
+
   <style>
     :root {
       --bg-color: #0a0b10;
@@ -56,7 +64,7 @@
       background: var(--bg-color);
       box-shadow: 8px 8px 16px var(--shadow-dark), -8px -8px 16px var(--shadow-light);
     }
-    
+
     .nm-inset {
       background: var(--bg-color);
       box-shadow: inset 6px 6px 12px var(--shadow-dark), inset -6px -6px 12px var(--shadow-light);
@@ -82,7 +90,7 @@
     .glow-cyan {
       filter: drop-shadow(0 0 5px var(--neon-cyan));
     }
-    
+
     .text-glow-cyan {
       text-shadow: 0 0 10px var(--neon-cyan);
     }
@@ -94,7 +102,7 @@
 
     /* Grid Background */
     .cyber-grid {
-      background-image: 
+      background-image:
         linear-gradient(rgba(0, 243, 255, 0.03) 1px, transparent 1px),
         linear-gradient(90deg, rgba(0, 243, 255, 0.03) 1px, transparent 1px);
       background-size: 40px 40px;
@@ -112,8 +120,13 @@
     }
 
     @keyframes scanline {
-      0% { bottom: 100%; }
-      100% { bottom: -100px; }
+      0% {
+        bottom: 100%;
+      }
+
+      100% {
+        bottom: -100px;
+      }
     }
 
     html {
@@ -133,9 +146,11 @@
   }
   </script>
 </head>
+
 <body class="cyber-grid relative min-h-screen">
   <div class="scanline pointer-events-none"></div>
   <div id="root"></div>
   <script type="module" src="index.js"></script>
 </body>
+
 </html>
