Add sitemap.xml, robots.txt and update SEO

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     content="Quantitative Ventures World Innovators, Startup Pitch Competition, QVWI, Orbitonimics, space tech startup, business logistics competition, seed funding 2026, global startup stage">
   <meta name="author" content="Quantitative Ventures World Innovators">
   <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://quantitativeventuresworldinnovatorsstartuppitchcompetition.com/" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://qvwi-pitch.com/">
+  <meta property="og:url" content="https://quantitativeventuresworldinnovatorsstartuppitchcompetition.com/">
   <meta property="og:title" content="Quantitative Ventures World Innovators Startup Pitch Competition">
   <meta property="og:description"
     content="Empowering the next generation of global founders through high-stakes competition and technical mentorship. Join the 2026 competition.">
@@ -26,7 +27,7 @@
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://qvwi-pitch.com/">
+  <meta property="twitter:url" content="https://quantitativeventuresworldinnovatorsstartuppitchcompetition.com/">
   <meta property="twitter:title" content="Quantitative Ventures World Innovators Startup Pitch Competition">
   <meta property="twitter:description"
     content="Empowering global founders with seed capital and technical mentorship in Space and Business Tech.">
