docs: add google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quantitative Ventures World Innovators Startup Pitch Competition | Future Tech Stage</title>
+  <meta name="google-site-verification" content="0Jk30691dFUB4yqx06jxKHTFuvO_yeflBIERg1n5meI" />
 
   <!-- Primary Meta Tags -->
   <meta name="title" content="Quantitative Ventures World Innovators Startup Pitch Competition">
