--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quantitative Ventures World Innovators Startup Pitch Competition | Future Tech Stage</title>
+  <title>QVWI Startup Competition | Global Pitch Event</title>
+  <link rel="icon" type="image/png" href="/favicon.png">
   <meta name="google-site-verification" content="0Jk30691dFUB4yqx06jxKHTFuvO_yeflBIERg1n5meI" />
 
   <!-- Primary Meta Tags -->
   <meta name="title" content="Quantitative Ventures World Innovators Startup Pitch Competition">
   <meta name="description"
-    content="Official home of the Quantitative Ventures World Innovators (QVWI) Startup Pitch Competition. A global launchpad for space, AI, and business tech innovators offering seed funding and mentorship.">
+    content="Join the QVWI Startup Pitch Competition. Seed funding and mentorship for Space, AI, and Business Tech innovators.">
   <meta name="keywords"
     content="Quantitative Ventures World Innovators, Startup Pitch Competition, QVWI, Orbitonimics, space tech startup, business logistics competition, seed funding 2026, global startup stage">
   <meta name="author" content="Quantitative Ventures World Innovators">
@@ -20,18 +21,18 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://quantitativeventuresworldinnovatorsstartuppitchcompetition.com/">
-  <meta property="og:title" content="Quantitative Ventures World Innovators Startup Pitch Competition">
+  <meta property="og:title" content="QVWI Startup Competition | Global Pitch Event">
   <meta property="og:description"
-    content="Empowering the next generation of global founders through high-stakes competition and technical mentorship. Join the 2026 competition.">
+    content="Join the QVWI Startup Pitch Competition. Seed funding and mentorship for Space, AI, and Business Tech innovators.">
   <meta property="og:image"
     content="https://images.unsplash.com/photo-1451187580459-43490279c0fa?auto=format&fit=crop&q=80&w=1200">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://quantitativeventuresworldinnovatorsstartuppitchcompetition.com/">
-  <meta property="twitter:title" content="Quantitative Ventures World Innovators Startup Pitch Competition">
+  <meta property="twitter:title" content="QVWI Startup Competition | Global Pitch Event">
   <meta property="twitter:description"
-    content="Empowering global founders with seed capital and technical mentorship in Space and Business Tech.">
+    content="Join the QVWI Startup Pitch Competition. Seed funding and mentorship for Space, AI, and Business Tech innovators.">
   <meta property="twitter:image"
     content="https://images.unsplash.com/photo-1451187580459-43490279c0fa?auto=format&fit=crop&q=80&w=1200">
 
