Optimize SEO metadata

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="google-site-verification" content="0Jk30691dFUB4yqx06jxKHTFuvO_yeflBIERg1n5meI" />
 
   <!-- Primary Meta Tags -->
-  <meta name="title" content="Quantitative Ventures World Innovators Startup Pitch Competition">
+  <meta name="title" content="QVWI Startup Competition | Global Pitch Event">
   <meta name="description"
     content="Join the QVWI Startup Pitch Competition. Seed funding and mentorship for Space, AI, and Business Tech innovators.">
   <meta name="keywords"
